# dapperdata

./: .gitattributes  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: black.yaml  pretty-config.yaml  pypi.yaml  pytest.yaml
dapperdata/: cli.py
dapperdata/conf/: settings.py
dapperdata/formatters/: json.py  yaml.py
prettyconfig/conf/: settings.py
prettyconfig/formatters/: json.py  yaml.py
tests/: test_json.py  test_settings.py  test_yaml.py
tests/json_tests/: compact.in.json  compact.out.json
tests/yaml_tests/: newlines.in.yaml  newlines.out.yaml
