[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "versioneer>=0.25"]

[tool.isort]
profile = "black"
skip = [".venv"]
src_paths = ["dapperdata", "tests"]

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.env
    | _build
    | buck-out
    | build
    | dist
  )
)
'''
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.dapperdata]
exclude_paths = [".venv", "tests", ".git", ".vscode"]
