[metadata]
name = dapperdata
description = A python library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[versioneer]
VCS = git
style = pep440
versionfile_source = dapperdata/_version.py
versionfile_build = dapperdata/_version.py
tag_prefix = v

parentdir_prefix =

[options]
packages = find:
include_package_data = True
install_requires =
  pydantic
  typer
  ruamel.yaml
  tomli>=1.1.0;python_version<'3.11'

[options.extras_require]
dev =
  black
  build
  glom
  isort
  mypy
  pip-tools
  pytest
  pytest-cov
  pytest-pretty


[options.package_data]
dapperdata = py.typed

[options.entry_points]
console_scripts =
  dapperdata = dapperdata.cli:app

